--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,10 @@
         <version>7.0</version>
         <scope>provided</scope>
     </dependency>
+    <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.35</version>
+</dependency>
   </dependencies>
 </project>
